--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,30 @@
 language: cpp
+compiler: gcc
 sudo: true
+dist: trusty
 
 os:
   - linux
 
-compiler:
-  - gcc
-  - clang
-
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install libsfml-dev
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  - sudo apt-get install -y libsfml-dev
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+  - mkdir /tmp/cmake
+  - cd /tmp/cmake
+  - wget https://cmake.org/files/v3.10/cmake-3.10.0.tar.gz
+  - tar xzf cmake-3.10.0.tar.gz
+  - cd cmake-3.10.0/
+  - ./configure --prefix=/opt/cmake
+  - make
+  - sudo make install
 
 script:
   - mkdir build
   - cd build
-  - cmake ..
+  - /opt/cmake/bin/cmake ..
   - make
