Investigate why include fails in travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,6 @@ script:
   - mkdir build
   - cd build
   - /opt/cmake/bin/cmake ..
+  - ls /usr/include/SFML
+  - ls /usr/include/SFML/Window
   - make
