--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ os:
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu xenial universe"
   - sudo apt-get update -qq
 
 install: 
