--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
+    - os: osx
+      osx_image: xcode9.2
 
 before_install:
   - sh .travis/before_install.sh
