--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
 script:
   - mkdir build
   - cd build
-  - [[ "$TRAVIS_OS_NAME" == "linux" ]]; then /opt/cmake/bin/cmake .. ; fi
-  - [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake .. ; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then /opt/cmake/bin/cmake ..; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then cmake ..; fi
   - make
