--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,12 @@ matrix:
       osx_image: xcode9.2
 
 before_install:
-  - sh .travis/before_install.sh
+  - chmod +x .travis/before_install.sh
+  - chmod +x .travis/install.sh
+  - ./.travis/before_install.sh
 
 install: 
-  - sh .travis/install.sh
+  - ./.travis/install.sh
 
 script:
   - mkdir build
