fix: Enabled POSITION_INDEPENDENT_CODE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS OFF)
 
 if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
@@ -34,7 +35,12 @@ include_directories(
 set(IMGUI_SFML_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}"
     CACHE INTERNAL "IMGUI_SFML_INCLUDE_DIRS")
 
-add_library(${PROJECT_NAME} ${IMGUI_SFML_SOURCES})
+if(MAKE_SHARED_LIB)
+  add_library(${PROJECT_NAME} SHARED ${IMGUI_SFML_SOURCES})
+else()
+  add_library(${PROJECT_NAME} STATIC ${IMGUI_SFML_SOURCES})
+endif()
+
 target_link_libraries(${PROJECT_NAME}
   ${OPENGL_LIBRARIES}
   ${SFML_DEPENDENCIES}
