build: fix cmake command in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ install:
 script:
   - mkdir build
   - cd build
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then /opt/cmake/bin/cmake ..; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake ..; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake ..; fi
   - make
