Include SFML headers in IMGUI_SFML_INCLUDE_DIRS
Reason for this change is that imgui.h includes imconfig.h that includes
some SFML headers. No obvious solution to avoid this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,12 @@ include_directories(
   ${SFML_INCLUDE_DIR}
 )
 
-set(IMGUI_SFML_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}"
+set(IMGUI_SFML_INCLUDES ${PROJECT_SOURCE_DIR})
+list(APPEND IMGUI_SFML_INCLUDES ${SFML_INCLUDE_DIR})
+set(IMGUI_SFML_INCLUDE_DIRS ${IMGUI_SFML_INCLUDES}
     CACHE INTERNAL "IMGUI_SFML_INCLUDE_DIRS")
+
+message(STATUS "imgui-sfml include directories: ${IMGUI_SFML_INCLUDE_DIRS}")
 
 if(MAKE_SHARED_LIB)
   add_library(${PROJECT_NAME} SHARED ${IMGUI_SFML_SOURCES})
