--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,14 +18,9 @@ set(CMAKE_COLOR_MAKEFILE ON)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
-find_package(OpenGL REQUIRED)
-find_package(SFML 2.2 COMPONENTS graphics window system)
-
 file(GLOB IMGUI_SFML_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp" "${PROJECT_SOURCE_DIR}/*.h")
 
-message(STATUS "SFML include directories: ${SFML_INCLUDE_DIR}")
-message(STATUS "SFML dependencies: ${SFML_DEPENDENCIES}")
-message(STATUS "SFML libraries: ${SFML_LIBRARIES}")
+set(${SFML_INCLUDE_DIR}, "../SFML/include/")
 
 include_directories(
   ${PROJECT_SOURCE_DIR}
@@ -47,6 +42,5 @@ endif()
 
 target_link_libraries(${PROJECT_NAME}
   ${OPENGL_LIBRARIES}
-  ${SFML_DEPENDENCIES}
-  ${SFML_LIBRARIES}
+  sfml-network sfml-graphics sfml-window sfml-system sfml-audio
 )
